--- a/MovieBooking/MovieBookingSPA/src/app/projection/projection-info/projection-info.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/projection/projection-info/projection-info.component.html
@@ -121,7 +121,7 @@
                 </div>
         
                 <div class="form-group">
-                        <span *ngIf="showServerError" class="error">Theater Hall with that date and term is taken</span>
+                        <span *ngIf="showServerError" class="error">Theater Hall with this date and term is taken</span>
                 </div>
             </form>
         </div>
