--- a/MovieBooking/MovieBookingSPA/src/app/identity/feature-user-info/user-profile/user-profile.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/identity/feature-user-info/user-profile/user-profile.component.html
@@ -1,8 +1,8 @@
 <div style="margin: 20px">
-    <h3 style="color: rgb(50, 159, 209)">{{ appState.username }}'s profile
+    <h3 style="color: gray"><b><i>{{ appState.username }}'s profile&nbsp;</i></b>
         <span class="h6">
             <a [routerLink]="['changeuserinfo']">
-                <i title="Edit profile" class="fa fa-pencil-square-o" aria-hidden="true" style="font-size: 25px;color: rgb(50, 159, 209);text-decoration: none;"></i>
+                <i title="Edit profile" class="fa fa-pencil-square-o" aria-hidden="true" style="font-size: 25px;color: gray;text-decoration: none;"></i>
             </a>
         </span>
     </h3>
