--- a/MovieBooking/MovieBookingSPA/src/app/identity/feature-user-info/user-profile/user-profile.component.css
+++ b/MovieBooking/MovieBookingSPA/src/app/identity/feature-user-info/user-profile/user-profile.component.css
@@ -1,8 +1,8 @@
 .first-column {
-    color: rgb(152, 207, 232);
+    color: white;
     background-color: rgb(50, 159, 209);
 }
 
 .second-column {
-    color: rgb(50, 159, 209);
+    color: black;
 }
