--- a/MovieBooking/MovieBookingSPA/src/app/movies/feature-add-movie/add-movie/add-movie.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/movies/feature-add-movie/add-movie/add-movie.component.html
@@ -1,10 +1,10 @@
 <div>
     <nav class="navbar navbar-expand">
         <div class="navbar-brand">
-            <h3 style="color: rgb(50, 159, 209); margin-top:10px; margin-left: 10px;"><b><i>Add movie</i></b></h3>
+            <h3 style="color: gray; margin-top:10px; margin-left: 10px;"><b><i>Add movie</i></b></h3>
         </div>
     </nav>
-    <label style="color: rgb(50, 159, 209);">Enter movie id from IMDb:</label>
+    <label>Enter movie id from IMDb:</label>
     <input class="form-control" (keyup.enter)="addMovie()" [(ngModel)]="movieId" style="width: 50%" id="input" type="text" autocomplete="off">
     <button type="button" (click)="addMovie()" class="btn btn-primary" style="margin-top: 10px">Submit</button>
 </div>
