Fixed button position when window is narrow

--- a/MovieBooking/MovieBookingSPA/src/app/projection/projection-delete-button/projection-delete-button.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/projection/projection-delete-button/projection-delete-button.component.html
@@ -1,4 +1,4 @@
-<button class="btn"
+<button class="btn button-display"
         style="background-color: rgba(161, 0, 0, 0.862); color: white;"
         (click)="open(mymodal)">
         Delete Projections
