--- a/MovieBooking/MovieBookingSPA/src/app/projection/projection-form/projection-form.component.css
+++ b/MovieBooking/MovieBookingSPA/src/app/projection/projection-form/projection-form.component.css
@@ -17,3 +17,8 @@ span.error {
     margin-top: 20px; 
     margin-right: 20px;
 }
+@media screen and (max-width: 1050px) {
+    .button-display{
+        display: block;
+    }
+}
