--- a/MovieBooking/MovieBookingSPA/src/app/projection/projection-form/projection-form.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/projection/projection-form/projection-form.component.html
@@ -1,4 +1,4 @@
-<button class="btn btn-primary" 
+<button class="btn btn-primary button-display" 
         (click)="open(mymodal)">
         Add new Projection
 </button>
