--- a/MovieBooking/MovieBookingSPA/src/app/projection/projection.component.css
+++ b/MovieBooking/MovieBookingSPA/src/app/projection/projection.component.css
@@ -5,3 +5,9 @@
     margin-top: 20px; 
     margin-right: 20px;
 }
+@media screen and (max-width: 1050px) {
+
+    hr{
+        margin-top: 60px;
+    }
+}
