--- a/MovieBooking/MovieBookingSPA/src/app/discount/feature-discount/coupon-delete-form/coupon-delete-form.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/discount/feature-discount/coupon-delete-form/coupon-delete-form.component.html
@@ -1,4 +1,4 @@
-<button class="btn" 
+<button class="btn button-display" 
         (click)="open(mymodal)"
         style="background-color: rgba(161, 0, 0, 0.862); color: aliceblue">
         Delete coupon
