--- a/MovieBooking/MovieBookingSPA/src/app/discount/discount.component.css
+++ b/MovieBooking/MovieBookingSPA/src/app/discount/discount.component.css
@@ -1,3 +1,9 @@
+@media screen and (max-width: 100px){
+    .button-diplay {
+        display: block;
+    }
+}
+
 .pos{
     position: absolute; 
     top:0; 
@@ -5,3 +11,9 @@
     margin-top: 20px; 
     margin-right: 20px;
 }
+
+@media screen and (max-width: 1050px) {
+    hr{
+        margin-top: 140px;
+    }
+} 
