--- a/MovieBooking/MovieBookingSPA/src/app/discount/feature-discount/coupon-update-form/coupon-update-form.component.html
+++ b/MovieBooking/MovieBookingSPA/src/app/discount/feature-discount/coupon-update-form/coupon-update-form.component.html
@@ -1,4 +1,4 @@
-<button class="btn btn-primary" 
+<button class="btn btn-primary button-display" 
         (click)="open(mymodal)">
         Update coupon
 </button>
