fix Reservations table fixed when window is narrow

--- a/MovieBooking/MovieBookingSPA/src/app/reservations/reservations-list/reservations-list.component.css
+++ b/MovieBooking/MovieBookingSPA/src/app/reservations/reservations-list/reservations-list.component.css
@@ -6,3 +6,10 @@ span.msg {
   font-size: 11px;
   color: blue;
 }
+
+@media screen and (max-width: 550px) {
+  .price {
+    display: none;
+  }
+  
+}
